--- a/lab/lab8.ioc
+++ b/lab/lab8.ioc
@@ -3,7 +3,7 @@ Mcu.Family=STM32F4
 ProjectManager.MainLocation=Core/Src
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 ProjectManager.ProjectFileName=lab8.ioc
-USART2.IPParameters=VirtualMode
+USART2.IPParameters=VirtualMode,BaudRate
 RCC.CortexFreq_Value=84000000
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F411RETx
@@ -23,6 +23,8 @@ RCC.APB1CLKDivider=RCC_HCLK_DIV2
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 boardIOC=true
 PA2.GPIOParameters=GPIO_Label
+NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+USART2.BaudRate=115200
 PH1\ -\ OSC_OUT.Locked=true
 PinOutPanel.RotationAngle=0
 RCC.FamilyName=M
